[package]
name = "swp"
description = "Swap two paths, atomically or as close as"
homepage = "https://github.com/passcod/swp"
repository = "https://github.com/passcod/swp.git"
documentation = "https://github.com/passcod/swp.git"
authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Artistic 2.0"
keywords = ["rename", "swap", "renameat2", "exchange", "cross-platform"]
categories = ["command-line-utilities"]

version = "1.0.0"
edition = "2018"

[dependencies]
getopts = "0.2.19"
libc = "0.2.55"
